--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "lite-server": "^2.4.0",
     "truffle": "^4.1.13",
+    "web3": "^1.0.0-beta.35",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
