--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ganache-cli": "^6.1.6",
     "lite-server": "^2.4.0",
     "truffle": "^4.1.13",
     "web3": "^1.0.0-beta.35",
