--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^7.2.1",
     "ganache-cli": "^6.1.8",
     "lite-server": "^2.4.0",
     "truffle": "^4.1.14",
